add all min max endpoint
