# stub/swagger_server/models/__init__.py
@@ -1,6 +1,7 @@
 # flake8: noqa
 # import models into model package
 from swagger_server.models.all import All
+from swagger_server.models.all_with_date_and_allergic import AllWithDateAndAllergic
 from swagger_server.models.aqi import Aqi
 from swagger_server.models.humidity import Humidity
 from swagger_server.models.pm10 import Pm10
