# stub/swagger_server/models/all_with_date_and_allergic.py
@@ -1,0 +1,217 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model import Model
+from swagger_server import util
+
+
+class AllWithDateAndAllergic(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, temperature=None, humidity=None, pm25=None, pm10=None, aqi=None, allergic_rhinitis=None, _date=None):  # noqa: E501
+        """AllWithDateAndAllergic - a model defined in OpenAPI
+
+        :param temperature: The temperature of this AllWithDateAndAllergic.  # noqa: E501
+        :type temperature: float
+        :param humidity: The humidity of this AllWithDateAndAllergic.  # noqa: E501
+        :type humidity: int
+        :param pm25: The pm25 of this AllWithDateAndAllergic.  # noqa: E501
+        :type pm25: int
+        :param pm10: The pm10 of this AllWithDateAndAllergic.  # noqa: E501
+        :type pm10: int
+        :param aqi: The aqi of this AllWithDateAndAllergic.  # noqa: E501
+        :type aqi: int
+        :param allergic_rhinitis: The allergic_rhinitis of this AllWithDateAndAllergic.  # noqa: E501
+        :type allergic_rhinitis: bool
+        :param _date: The _date of this AllWithDateAndAllergic.  # noqa: E501
+        :type _date: str
+        """
+        self.openapi_types = {
+            'temperature': float,
+            'humidity': int,
+            'pm25': int,
+            'pm10': int,
+            'aqi': int,
+            'allergic_rhinitis': bool,
+            '_date': str
+        }
+
+        self.attribute_map = {
+            'temperature': 'temperature',
+            'humidity': 'humidity',
+            'pm25': 'pm25',
+            'pm10': 'pm10',
+            'aqi': 'aqi',
+            'allergic_rhinitis': 'allergic_rhinitis',
+            '_date': 'date'
+        }
+
+        self._temperature = temperature
+        self._humidity = humidity
+        self._pm25 = pm25
+        self._pm10 = pm10
+        self._aqi = aqi
+        self._allergic_rhinitis = allergic_rhinitis
+        self.__date = _date
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'AllWithDateAndAllergic':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The AllWithDateAndAllergic of this AllWithDateAndAllergic.  # noqa: E501
+        :rtype: AllWithDateAndAllergic
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def temperature(self) -> float:
+        """Gets the temperature of this AllWithDateAndAllergic.
+
+
+        :return: The temperature of this AllWithDateAndAllergic.
+        :rtype: float
+        """
+        return self._temperature
+
+    @temperature.setter
+    def temperature(self, temperature: float):
+        """Sets the temperature of this AllWithDateAndAllergic.
+
+
+        :param temperature: The temperature of this AllWithDateAndAllergic.
+        :type temperature: float
+        """
+
+        self._temperature = temperature
+
+    @property
+    def humidity(self) -> int:
+        """Gets the humidity of this AllWithDateAndAllergic.
+
+
+        :return: The humidity of this AllWithDateAndAllergic.
+        :rtype: int
+        """
+        return self._humidity
+
+    @humidity.setter
+    def humidity(self, humidity: int):
+        """Sets the humidity of this AllWithDateAndAllergic.
+
+
+        :param humidity: The humidity of this AllWithDateAndAllergic.
+        :type humidity: int
+        """
+
+        self._humidity = humidity
+
+    @property
+    def pm25(self) -> int:
+        """Gets the pm25 of this AllWithDateAndAllergic.
+
+
+        :return: The pm25 of this AllWithDateAndAllergic.
+        :rtype: int
+        """
+        return self._pm25
+
+    @pm25.setter
+    def pm25(self, pm25: int):
+        """Sets the pm25 of this AllWithDateAndAllergic.
+
+
+        :param pm25: The pm25 of this AllWithDateAndAllergic.
+        :type pm25: int
+        """
+
+        self._pm25 = pm25
+
+    @property
+    def pm10(self) -> int:
+        """Gets the pm10 of this AllWithDateAndAllergic.
+
+
+        :return: The pm10 of this AllWithDateAndAllergic.
+        :rtype: int
+        """
+        return self._pm10
+
+    @pm10.setter
+    def pm10(self, pm10: int):
+        """Sets the pm10 of this AllWithDateAndAllergic.
+
+
+        :param pm10: The pm10 of this AllWithDateAndAllergic.
+        :type pm10: int
+        """
+
+        self._pm10 = pm10
+
+    @property
+    def aqi(self) -> int:
+        """Gets the aqi of this AllWithDateAndAllergic.
+
+
+        :return: The aqi of this AllWithDateAndAllergic.
+        :rtype: int
+        """
+        return self._aqi
+
+    @aqi.setter
+    def aqi(self, aqi: int):
+        """Sets the aqi of this AllWithDateAndAllergic.
+
+
+        :param aqi: The aqi of this AllWithDateAndAllergic.
+        :type aqi: int
+        """
+
+        self._aqi = aqi
+
+    @property
+    def allergic_rhinitis(self) -> bool:
+        """Gets the allergic_rhinitis of this AllWithDateAndAllergic.
+
+
+        :return: The allergic_rhinitis of this AllWithDateAndAllergic.
+        :rtype: bool
+        """
+        return self._allergic_rhinitis
+
+    @allergic_rhinitis.setter
+    def allergic_rhinitis(self, allergic_rhinitis: bool):
+        """Sets the allergic_rhinitis of this AllWithDateAndAllergic.
+
+
+        :param allergic_rhinitis: The allergic_rhinitis of this AllWithDateAndAllergic.
+        :type allergic_rhinitis: bool
+        """
+
+        self._allergic_rhinitis = allergic_rhinitis
+
+    @property
+    def _date(self) -> str:
+        """Gets the _date of this AllWithDateAndAllergic.
+
+
+        :return: The _date of this AllWithDateAndAllergic.
+        :rtype: str
+        """
+        return self.__date
+
+    @_date.setter
+    def _date(self, _date: str):
+        """Sets the _date of this AllWithDateAndAllergic.
+
+
+        :param _date: The _date of this AllWithDateAndAllergic.
+        :type _date: str
+        """
+
+        self.__date = _date
